--- a/article.html
+++ b/article.html
@@ -4,80 +4,186 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title> <!-- Will be updated by JS -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', 'Open Sans', sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
-            color: #333;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #ffffff;
+            color: #1a1a1a;
+            line-height: 1.6;
+        }
+
+        /* Header */
         header {
-            background-color: #007bff;
-            color: white;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: #ffffff;
+            z-index: 1000;
             padding: 1rem 0;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            transition: all 0.3s ease;
         }
+
         nav {
             display: flex;
             justify-content: center;
-            gap: 2rem;
+            align-items: center;
+            gap: 2.5rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
         }
+
         nav a {
-            color: white;
+            color: #333;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: 500;
+            font-size: 0.95rem;
+            position: relative;
+            transition: color 0.3s ease;
         }
+
+        nav a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: #2563eb;
+            transition: width 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #2563eb;
+        }
+
+        nav a:hover::after {
+            width: 100%;
+        }
+
+        /* Article Detail Section */
         .article-detail {
             max-width: 800px;
-            margin: 2rem auto;
+            margin: 100px auto 4rem; /* Top margin for fixed header, bottom for footer */
             padding: 2rem;
             background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+            border: 1px solid #e5e7eb;
         }
+
         .article-detail img {
             width: 100%;
-            height: 300px;
+            height: 400px; /* Fixed height for consistency */
             object-fit: cover;
-            border-radius: 4px;
-            margin-bottom: 1rem;
+            border-radius: 8px;
+            margin-bottom: 1.5rem;
         }
+
         .article-meta {
-            color: #6c757d;
+            color: #6b7280;
             font-size: 0.9rem;
+            margin-bottom: 1.5rem;
+            display: flex;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+        .article-meta span {
+            display: flex;
+            align-items: center;
+        }
+        .article-meta span::before {
+            content: '•';
+            margin: 0 0.5rem;
+        }
+        .article-meta span:first-child::before {
+            display: none; /* Hide bullet before first item */
+        }
+
+        .article-body {
+            line-height: 1.8;
+            color: #374151;
+        }
+        .article-body h1, .article-body h2, .article-body h3 {
+            color: #1a1a1a;
+            margin-top: 1.5rem;
             margin-bottom: 1rem;
         }
-        .article-body {
-            line-height: 1.6;
+        .article-body h1 {
+            font-size: 2rem;
+            font-weight: 700;
+        }
+        .article-body h2 {
+            font-size: 1.75rem;
+            font-weight: 600;
+        }
+        .article-body h3 {
+            font-size: 1.5rem;
+            font-weight: 600;
         }
         .article-body p {
-            margin-bottom: 1rem;
+            margin-bottom: 1.25rem;
         }
-        .article-body ul {
-            margin-bottom: 1rem;
+        .article-body a {
+            color: #2563eb;
+            text-decoration: underline;
         }
+        .article-body a:hover {
+            color: #1e40af;
+        }
+        .article-body ul, .article-body ol {
+            margin-left: 1.5rem;
+            margin-bottom: 1.25rem;
+        }
+        .article-body li {
+            margin-bottom: 0.5rem;
+        }
+
+        /* Footer */
         footer {
-            background-color: #343a40;
-            color: white;
+            background: #1a1a1a;
+            color: #9ca3af;
             text-align: center;
-            padding: 1rem 0;
-            margin-top: 3rem;
+            padding: 2.5rem 2rem;
         }
-        /* Basic Responsive */
+
+        footer p {
+            font-size: 0.9rem;
+        }
+
+        /* Responsive Design */
         @media (max-width: 768px) {
             nav {
-                flex-direction: column;
-                gap: 0.5rem;
+                flex-wrap: wrap;
+                gap: 1rem;
+                justify-content: center;
             }
+
             .article-detail {
-                margin: 1rem;
-                padding: 1rem;
+                margin: 90px 1rem 2rem; /* Adjusted for mobile */
+                padding: 1.5rem;
+            }
+
+            .article-detail img {
+                height: 250px; /* Smaller image on mobile */
+            }
+
+            .article-meta {
+                font-size: 0.8rem;
             }
         }
     </style>
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav>
             <a href="index.html">Home</a>
             <a href="articles.html">Articles</a>
@@ -91,7 +197,8 @@
         <img id="article-image" src="" alt="" loading="lazy">
         <h1 id="article-title">Loading...</h1>
         <div class="article-meta">
-            <span id="article-author"></span> | <span id="article-date"></span>
+            <span id="article-author">By Unknown</span>
+            <span id="article-date">Date Unknown</span>
         </div>
         <div id="article-body" class="article-body">
             <!-- Article content will be loaded here -->
@@ -170,7 +277,6 @@
                 document.getElementById('article-image').alt = meta.title;
                 document.getElementById('article-title').textContent = meta.title;
                 document.getElementById('article-author').textContent = `By ${meta.author || 'Unknown'}`;
-                // Format date if needed, assuming it's in a standard format
                 document.getElementById('article-date').textContent = new Date(meta.date).toLocaleDateString();
                 document.getElementById('article-body').innerHTML = htmlBody;
                 document.title = meta.title;
