--- a/articles.html
+++ b/articles.html
@@ -4,39 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Articles - Your NGO Name</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', 'Open Sans', sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
-            color: #333;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #ffffff;
+            color: #1a1a1a;
+            line-height: 1.6;
+        }
+
+        /* Header */
         header {
-            background-color: #007bff;
-            color: white;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: #ffffff;
+            z-index: 1000;
             padding: 1rem 0;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            transition: all 0.3s ease;
         }
+
         nav {
             display: flex;
             justify-content: center;
-            gap: 2rem;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .section {
-            padding: 2rem 1rem;
+            align-items: center;
+            gap: 2.5rem;
             max-width: 1200px;
             margin: 0 auto;
+            padding: 0 2rem;
         }
+
+        nav a {
+            color: #333;
+            text-decoration: none;
+            font-weight: 500;
+            font-size: 0.95rem;
+            position: relative;
+            transition: color 0.3s ease;
+        }
+
+        nav a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: #2563eb;
+            transition: width 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #2563eb;
+        }
+
+        nav a:hover::after {
+            width: 100%;
+        }
+
+        /* Section Styling */
+        .section {
+            padding: 5rem 2rem;
+            max-width: 1200px;
+            margin: 80px auto 0; /* Add top margin to account for fixed header */
+        }
+
         .section h2 {
             text-align: center;
-            margin-bottom: 2rem;
-            color: #007bff;
+            margin-bottom: 3rem;
+            font-size: 2.5rem;
+            font-weight: 700;
+            color: #1a1a1a;
         }
+
+        .section h2::after {
+            content: '';
+            display: block;
+            width: 60px;
+            height: 4px;
+            background: #2563eb;
+            margin: 1rem auto 0;
+            border-radius: 2px;
+        }
+
+        /* Filters */
         .filters {
             text-align: center;
             margin-bottom: 2rem;
@@ -44,67 +102,178 @@
         .filters button {
             margin: 0.25rem 0.5rem;
             padding: 0.5rem 1rem;
-            background-color: #e9ecef;
-            border: 1px solid #ced4da;
+            background-color: #f3f4f6; /* Light gray */
+            border: 1px solid #d1d5db; /* Gray border */
             border-radius: 4px;
             cursor: pointer;
+            color: #374151; /* Gray text */
+            font-family: 'Inter', sans-serif;
+            font-weight: 500;
+            transition: all 0.3s ease;
         }
-        .filters button.active {
-            background-color: #007bff;
+        .filters button.active, .filters button:hover {
+            background-color: #2563eb; /* Blue */
             color: white;
+            border-color: #2563eb;
         }
+
+        /* Articles Grid */
         .articles-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 2rem;
         }
+
+        /* Card Design (same as index.html) */
         .card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            background: white;
+            border-radius: 12px;
             overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+            transition: all 0.3s ease;
+            border: 1px solid #e5e7eb;
         }
+
+        .card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
+        }
+
         .card img {
             width: 100%;
-            height: 200px;
+            height: 240px;
             object-fit: cover;
+            transition: transform 0.4s ease;
         }
+
+        .card:hover img {
+            transform: scale(1.05);
+        }
+
         .card-content {
-            padding: 1rem;
+            padding: 1.75rem;
         }
+
         .card-content h3 {
-            margin-top: 0;
+            font-size: 1.35rem;
+            margin-bottom: 0.75rem;
+            color: #1a1a1a;
+            font-weight: 600;
+            line-height: 1.4;
         }
+
+        .card-content p {
+            color: #6b7280;
+            line-height: 1.7;
+            margin-bottom: 1.25rem;
+            font-size: 0.95rem;
+        }
+
+        .card-content p strong {
+            color: #2563eb;
+            font-weight: 600;
+        }
+
+        .card button {
+            background: #2563eb;
+            color: white;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 6px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-family: 'Inter', sans-serif;
+            font-size: 0.9rem;
+            width: 100%;
+        }
+
+        .card button:hover {
+            background: #1e40af;
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(37, 99, 235, 0.3);
+        }
+
+        /* Pagination / Load More */
         .pagination {
             text-align: center;
-            margin-top: 2rem;
+            margin-top: 3rem;
         }
         .pagination button {
             padding: 0.75rem 1.5rem;
-            background-color: #007bff;
+            background-color: #2563eb;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             cursor: pointer;
+            font-family: 'Inter', sans-serif;
+            font-weight: 600;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
         }
+        .pagination button:hover {
+            background-color: #1e40af;
+        }
+
+        /* Footer */
         footer {
-            background-color: #343a40;
-            color: white;
+            background: #1a1a1a;
+            color: #9ca3af;
             text-align: center;
-            padding: 1rem 0;
-            margin-top: 3rem;
+            padding: 2.5rem 2rem;
+            margin-top: 4rem; /* Add top margin */
         }
-        /* Basic Responsive */
+
+        footer p {
+            font-size: 0.9rem;
+        }
+
+        /* Responsive Design */
         @media (max-width: 768px) {
             nav {
-                flex-direction: column;
-                gap: 0.5rem;
+                flex-wrap: wrap;
+                gap: 1rem;
+                justify-content: center;
             }
+
+            .section {
+                padding: 3rem 1.5rem;
+            }
+
+            .section h2 {
+                font-size: 2rem;
+            }
+
+            .articles-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        /* Loading Animation */
+        .loading {
+            text-align: center;
+            padding: 3rem 2rem;
+            color: #6b7280;
+        }
+
+        .spinner {
+            border: 3px solid #e5e7eb;
+            border-top: 3px solid #2563eb;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 0.8s linear infinite;
+            margin: 0 auto 1rem;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav>
             <a href="index.html">Home</a>
             <a href="articles.html">Articles</a>
@@ -121,6 +290,10 @@
         </div>
         <div id="articles-container" class="articles-grid">
             <!-- Articles will be loaded here -->
+            <div class="loading">
+                <div class="spinner"></div>
+                <p>Loading articles...</p>
+            </div>
         </div>
         <div class="pagination" id="pagination-container" style="display:none;">
             <button id="load-more-btn">Load More</button>
@@ -206,7 +379,7 @@
                 renderArticles(allArticles);
             } catch (error) {
                 console.error('Error loading articles:', error);
-                document.getElementById('articles-container').innerHTML = '<p>Error loading articles.</p>';
+                document.getElementById('articles-container').innerHTML = '<p>Error loading articles. Please try again later.</p>';
             }
         }
 
@@ -238,7 +411,7 @@
             const pageArticles = articles.slice(0, end);
 
             const articleCards = pageArticles.map(article => {
-                const excerpt = article.htmlBody.substring(0, 100) + '...';
+                const excerpt = article.htmlBody.substring(0, 120) + '...'; // Match index.html excerpt length
                 return `
                     <div class="card">
                         <img src="${article.meta.image}" alt="${article.meta.title}" loading="lazy">
