--- a/index.html
+++ b/index.html
@@ -4,90 +4,370 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Your NGO Name</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', 'Open Sans', sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
-            color: #333;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #ffffff;
+            color: #1a1a1a;
+            line-height: 1.6;
+        }
+
+        /* Header */
         header {
-            background-color: #007bff;
-            color: white;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: #ffffff;
+            z-index: 1000;
             padding: 1rem 0;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            transition: all 0.3s ease;
         }
+
         nav {
             display: flex;
             justify-content: center;
-            gap: 2rem;
+            align-items: center;
+            gap: 2.5rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
         }
+
         nav a {
-            color: white;
+            color: #333;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: 500;
+            font-size: 0.95rem;
+            position: relative;
+            transition: color 0.3s ease;
         }
+
+        nav a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: #2563eb;
+            transition: width 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #2563eb;
+        }
+
+        nav a:hover::after {
+            width: 100%;
+        }
+
+        /* Hero Section */
         .hero {
-            background-color: #e9ecef;
-            padding: 4rem 1rem;
+            margin-top: 70px;
+            background: linear-gradient(135deg, #2563eb 0%, #1e40af 100%);
+            color: white;
+            padding: 6rem 2rem;
             text-align: center;
+            position: relative;
+            overflow: hidden;
         }
+
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+            opacity: 0.3;
+        }
+
+        .hero-content {
+            max-width: 900px;
+            margin: 0 auto;
+            position: relative;
+            z-index: 1;
+        }
+
         .hero h1 {
-            margin: 0;
-            font-size: 2.5rem;
+            font-size: 3.5rem;
+            font-weight: 700;
+            margin-bottom: 1.5rem;
+            line-height: 1.2;
         }
+
+        .hero p {
+            font-size: 1.25rem;
+            margin-bottom: 2.5rem;
+            opacity: 0.95;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .cta-button {
+            display: inline-block;
+            padding: 1rem 2.5rem;
+            background: white;
+            color: #2563eb;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: 600;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            border: none;
+            cursor: pointer;
+        }
+
+        .cta-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+        }
+
+        /* Section Styling */
         .section {
-            padding: 3rem 1rem;
-        }
-        .section h2 {
-            text-align: center;
-            margin-bottom: 2rem;
-            color: #007bff;
-        }
-        .articles-preview, .team-preview {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1.5rem;
+            padding: 5rem 2rem;
             max-width: 1200px;
             margin: 0 auto;
         }
-        .card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            overflow: hidden;
+
+        .section:nth-child(odd) {
+            background-color: #f9fafb;
         }
+
+        .section h2 {
+            text-align: center;
+            margin-bottom: 3rem;
+            font-size: 2.5rem;
+            font-weight: 700;
+            color: #1a1a1a;
+        }
+
+        .section h2::after {
+            content: '';
+            display: block;
+            width: 60px;
+            height: 4px;
+            background: #2563eb;
+            margin: 1rem auto 0;
+            border-radius: 2px;
+        }
+
+        .articles-preview, .team-preview {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 2rem;
+        }
+
+        /* Card Design */
+        .card {
+            background: white;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+            transition: all 0.3s ease;
+            border: 1px solid #e5e7eb;
+        }
+
+        .card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
+        }
+
         .card img {
             width: 100%;
-            height: 200px; /* Fixed height for consistency */
+            height: 240px;
             object-fit: cover;
+            transition: transform 0.4s ease;
         }
+
+        .card:hover img {
+            transform: scale(1.05);
+        }
+
         .card-content {
-            padding: 1rem;
+            padding: 1.75rem;
         }
+
         .card-content h3 {
-            margin-top: 0;
+            font-size: 1.35rem;
+            margin-bottom: 0.75rem;
+            color: #1a1a1a;
+            font-weight: 600;
+            line-height: 1.4;
         }
-        footer {
-            background-color: #343a40;
+
+        .card-content p {
+            color: #6b7280;
+            line-height: 1.7;
+            margin-bottom: 1.25rem;
+            font-size: 0.95rem;
+        }
+
+        .card-content p strong {
+            color: #2563eb;
+            font-weight: 600;
+        }
+
+        .card button {
+            background: #2563eb;
             color: white;
-            text-align: center;
-            padding: 1rem 0;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 6px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-family: 'Inter', sans-serif;
+            font-size: 0.9rem;
+            width: 100%;
         }
-        /* Basic Responsive */
+
+        .card button:hover {
+            background: #1e40af;
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(37, 99, 235, 0.3);
+        }
+
+        /* View All Button */
+        .view-all-container {
+            text-align: center;
+            margin-top: 3rem;
+        }
+
+        .view-all-btn {
+            display: inline-block;
+            padding: 0.875rem 2rem;
+            background: transparent;
+            color: #2563eb;
+            text-decoration: none;
+            border-radius: 6px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            border: 2px solid #2563eb;
+        }
+
+        .view-all-btn:hover {
+            background: #2563eb;
+            color: white;
+        }
+
+        /* Stats Section */
+        .stats-section {
+            background: linear-gradient(135deg, #1e40af 0%, #2563eb 100%);
+            color: white;
+            padding: 4rem 2rem;
+            text-align: center;
+        }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 3rem;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        .stat-item h3 {
+            font-size: 3rem;
+            font-weight: 700;
+            margin-bottom: 0.5rem;
+        }
+
+        .stat-item p {
+            font-size: 1.1rem;
+            opacity: 0.9;
+        }
+
+        /* Footer */
+        footer {
+            background: #1a1a1a;
+            color: #9ca3af;
+            text-align: center;
+            padding: 2.5rem 2rem;
+        }
+
+        footer p {
+            font-size: 0.9rem;
+        }
+
+        /* Responsive Design */
         @media (max-width: 768px) {
             nav {
-                flex-direction: column;
-                gap: 0.5rem;
+                flex-wrap: wrap;
+                gap: 1rem;
+                justify-content: center;
             }
+
+            .hero {
+                padding: 4rem 1.5rem;
+            }
+
             .hero h1 {
+                font-size: 2.5rem;
+            }
+
+            .hero p {
+                font-size: 1.1rem;
+            }
+
+            .section {
+                padding: 3rem 1.5rem;
+            }
+
+            .section h2 {
                 font-size: 2rem;
             }
+
+            .articles-preview, .team-preview {
+                grid-template-columns: 1fr;
+            }
+
+            .stats-grid {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .stat-item h3 {
+                font-size: 2.5rem;
+            }
+        }
+
+        /* Loading Animation */
+        .loading {
+            text-align: center;
+            padding: 3rem 2rem;
+            color: #6b7280;
+        }
+
+        .spinner {
+            border: 3px solid #e5e7eb;
+            border-top: 3px solid #2563eb;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 0.8s linear infinite;
+            margin: 0 auto 1rem;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav>
             <a href="index.html">Home</a>
             <a href="articles.html">Articles</a>
@@ -98,27 +378,57 @@
     </header>
 
     <div class="hero">
-        <h1>Welcome to Our NGO</h1>
-        <p>Short description of the NGO's mission and impact.</p>
+        <div class="hero-content">
+            <h1>Making a Difference Together</h1>
+            <p>Empowering communities through sustainable development, education, and collaborative action for lasting positive change.</p>
+            <button class="cta-button" onclick="window.location.href='contact.html'">Get Involved</button>
+        </div>
     </div>
 
     <section class="section">
         <h2>Latest Articles</h2>
         <div id="articles-container" class="articles-preview">
-            <!-- Articles will be loaded here -->
+            <div class="loading">
+                <div class="spinner"></div>
+                <p>Loading articles...</p>
+            </div>
         </div>
-        <div style="text-align: center; margin-top: 2rem;">
-            <a href="articles.html"><button>View All Articles</button></a>
+        <div class="view-all-container">
+            <a href="articles.html" class="view-all-btn">View All Articles</a>
         </div>
     </section>
 
-    <section class="section" style="background-color: #e9ecef;">
+    <div class="stats-section">
+        <div class="stats-grid">
+            <div class="stat-item">
+                <h3>500+</h3>
+                <p>Projects Completed</p>
+            </div>
+            <div class="stat-item">
+                <h3>50K+</h3>
+                <p>Lives Impacted</p>
+            </div>
+            <div class="stat-item">
+                <h3>25+</h3>
+                <p>Countries Reached</p>
+            </div>
+            <div class="stat-item">
+                <h3>15</h3>
+                <p>Years of Service</p>
+            </div>
+        </div>
+    </div>
+
+    <section class="section">
         <h2>Meet Our Team</h2>
         <div id="team-container" class="team-preview">
-            <!-- Team members will be loaded here -->
+            <div class="loading">
+                <div class="spinner"></div>
+                <p>Loading team...</p>
+            </div>
         </div>
-        <div style="text-align: center; margin-top: 2rem;">
-            <a href="team.html"><button>View All Team</button></a>
+        <div class="view-all-container">
+            <a href="team.html" class="view-all-btn">View Full Team</a>
         </div>
     </section>
 
@@ -127,15 +437,14 @@
     </footer>
 
     <script>
-        // --- Helper Functions (for inline JS) ---
-        // Simple YAML frontmatter parser (basic key-value, single-line lists)
+        // Helper Functions
         function parseYAML(yamlStr) {
             const result = {};
             const lines = yamlStr.trim().split('\n');
             for (const line of lines) {
                 const [key, ...valueParts] = line.split(':');
                 const trimmedKey = key.trim();
-                let value = valueParts.join(':').trim(); // Re-join if value itself contained ':'
+                let value = valueParts.join(':').trim();
 
                 if (value.startsWith('"') && value.endsWith('"')) {
                     value = value.slice(1, -1);
@@ -149,49 +458,29 @@
             return result;
         }
 
-        // Simple Markdown to HTML converter (basic, handles headers, paragraphs, lists, links, bold, italic)
         function simpleMarkdownToHTML(md) {
             let html = md;
-
-            // Handle Headers (# Header 1, ## Header 2, etc.)
             html = html.replace(/^(\s*)## (.+)$/gm, '$1<h2>$2</h2>');
             html = html.replace(/^(\s*)# (.+)$/gm, '$1<h1>$2</h1>');
             html = html.replace(/^(\s*)### (.+)$/gm, '$1<h3>$2</h3>');
-
-            // Handle Bold (**text**)
             html = html.replace(/\*\*(.+?)\*\*/g, '<strong>$1</strong>');
-
-            // Handle Italic (*text*)
             html = html.replace(/\*(.+?)\*/g, '<em>$1</em>');
-
-            // Handle Links ([text](url))
             html = html.replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank">$1</a>');
-
-            // Handle Unordered Lists (- item)
             html = html.replace(/^- (.+)$/gm, '<li>$1</li>');
             html = html.replace(/(<li>.+<\/li>)+/g, '<ul>$&</ul>');
-
-            // Handle Line Breaks (convert \n to <br>)
             html = html.replace(/\n/g, '<br>');
-
-            // Handle Paragraphs (split by double newlines, then wrap in <p>)
             const paragraphs = html.split('<br><br>');
             html = paragraphs.map(p => `<p>${p}</p>`).join('');
-
-            // Clean up double <br> inside paragraphs
             html = html.replace(/<br><br>/g, '<br>');
-
             return html;
         }
 
-        // --- Main Loading Logic ---
         async function loadIndexContent() {
             try {
-                // Fetch index.json
                 const indexResponse = await fetch('/content/index.json');
                 const indexData = await indexResponse.json();
 
-                // Load latest 3 articles
+                // Load articles
                 const articleFiles = indexData.articles.slice(0, 3);
                 const articlePromises = articleFiles.map(file => fetch(`/content/${file}`).then(r => r.text()));
                 const articleTexts = await Promise.all(articlePromises);
@@ -202,9 +491,9 @@
                     const parts = text.split('---');
                     if (parts.length >= 3) {
                         const frontmatter = parts[1];
-                        const body = parts.slice(2).join('---'); // Re-join body if it contained '---'
+                        const body = parts.slice(2).join('---');
                         const meta = parseYAML(frontmatter);
-                        const excerpt = simpleMarkdownToHTML(body.substring(0, 100)) + '...';
+                        const excerpt = simpleMarkdownToHTML(body.substring(0, 120)) + '...';
                         articleCards.push(`
                             <div class="card">
                                 <img src="${meta.image}" alt="${meta.title}" loading="lazy">
@@ -219,7 +508,7 @@
                 }
                 document.getElementById('articles-container').innerHTML = articleCards.join('');
 
-                // Load first 3 team members
+                // Load team
                 const teamFiles = indexData.teams.slice(0, 3);
                 const teamPromises = teamFiles.map(file => fetch(`/content/${file}`).then(r => r.text()));
                 const teamTexts = await Promise.all(teamPromises);
@@ -232,13 +521,13 @@
                         const frontmatter = parts[1];
                         const body = parts.slice(2).join('---');
                         const meta = parseYAML(frontmatter);
-                        const excerpt = simpleMarkdownToHTML(body.substring(0, 80)) + '...';
+                        const excerpt = simpleMarkdownToHTML(body.substring(0, 100)) + '...';
                         teamCards.push(`
                             <div class="card">
                                 <img src="${meta.image}" alt="${meta.title}" loading="lazy">
                                 <div class="card-content">
                                     <h3>${meta.title}</h3>
-                                    <p>${meta.role}</p>
+                                    <p><strong>${meta.role}</strong></p>
                                     <p>${excerpt}</p>
                                     <button onclick="openDetail('${teamFiles[i]}', 'team')">View Profile</button>
                                 </div>
@@ -250,22 +539,20 @@
 
             } catch (error) {
                 console.error('Error loading index content:', error);
-                document.getElementById('articles-container').innerHTML = '<p>Error loading articles.</p>';
-                document.getElementById('team-container').innerHTML = '<p>Error loading team members.</p>';
+                document.getElementById('articles-container').innerHTML = '<p>Error loading articles. Please try again later.</p>';
+                document.getElementById('team-container').innerHTML = '<p>Error loading team members. Please try again later.</p>';
             }
         }
 
-        // Navigate to detail page
         function openDetail(id, type) {
             sessionStorage.setItem('selectedFile', id);
             if (type === 'article') {
-                 window.location.href = 'article.html';
+                window.location.href = 'article.html';
             } else if (type === 'team') {
-                 window.location.href = 'team_detail.html';
+                window.location.href = 'team_detail.html';
             }
         }
 
-        // Load content when page loads
         document.addEventListener('DOMContentLoaded', loadIndexContent);
     </script>
 </body>
