--- a/services.html
+++ b/services.html
@@ -4,80 +4,229 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - Your NGO Name</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', 'Open Sans', sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
-            color: #333;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #ffffff;
+            color: #1a1a1a;
+            line-height: 1.6;
+        }
+
+        /* Header */
         header {
-            background-color: #007bff;
-            color: white;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: #ffffff;
+            z-index: 1000;
             padding: 1rem 0;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            transition: all 0.3s ease;
         }
+
         nav {
             display: flex;
             justify-content: center;
-            gap: 2rem;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .section {
-            padding: 3rem 1rem;
+            align-items: center;
+            gap: 2.5rem;
             max-width: 1200px;
             margin: 0 auto;
+            padding: 0 2rem;
         }
+
+        nav a {
+            color: #333;
+            text-decoration: none;
+            font-weight: 500;
+            font-size: 0.95rem;
+            position: relative;
+            transition: color 0.3s ease;
+        }
+
+        nav a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: #2563eb;
+            transition: width 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #2563eb;
+        }
+
+        nav a:hover::after {
+            width: 100%;
+        }
+
+        /* Section Styling */
+        .section {
+            padding: 5rem 2rem;
+            max-width: 1200px;
+            margin: 80px auto 0; /* Add top margin to account for fixed header */
+        }
+
         .section h2 {
             text-align: center;
-            margin-bottom: 2rem;
-            color: #007bff;
+            margin-bottom: 3rem;
+            font-size: 2.5rem;
+            font-weight: 700;
+            color: #1a1a1a;
         }
+
+        .section h2::after {
+            content: '';
+            display: block;
+            width: 60px;
+            height: 4px;
+            background: #2563eb;
+            margin: 1rem auto 0;
+            border-radius: 2px;
+        }
+
+        /* Services Grid */
         .services-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 2.5rem;
         }
+
+        /* Service Card */
         .service-card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            padding: 1.5rem;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+            padding: 2rem;
             text-align: center;
+            transition: all 0.3s ease;
+            border: 1px solid #e5e7eb;
         }
+
+        .service-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
+        }
+
         .service-card img {
             width: 80px;
             height: 80px;
             object-fit: contain; /* Ensure icon fits nicely */
-            margin: 0 auto 1rem; /* Center icon */
+            margin: 0 auto 1.5rem; /* Center icon */
             display: block;
+            filter: drop-shadow(0 4px 6px rgba(37, 99, 235, 0.1)); /* Subtle shadow */
         }
+
         .service-card h3 {
-            color: #007bff;
+            color: #1a1a1a;
             margin-top: 0;
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+            font-weight: 600;
         }
+
+        .service-card .service-body {
+            color: #6b7280;
+            line-height: 1.7;
+            text-align: left; /* Align description text to the left */
+        }
+
+        .service-card .service-body h1, .service-card .service-body h2, .service-card .service-body h3 {
+            color: #1a1a1a;
+            margin-top: 1.25rem;
+            margin-bottom: 0.75rem;
+            font-size: 1.25rem;
+            font-weight: 600;
+            text-align: left; /* Ensure headings inside body are left-aligned */
+        }
+        .service-card .service-body p {
+            margin-bottom: 1rem;
+            text-align: left; /* Ensure paragraphs inside body are left-aligned */
+        }
+        .service-card .service-body a {
+            color: #2563eb;
+            text-decoration: underline;
+        }
+        .service-card .service-body a:hover {
+            color: #1e40af;
+        }
+        .service-card .service-body ul, .service-card .service-body ol {
+            margin-left: 1rem;
+            margin-bottom: 1rem;
+            text-align: left; /* Ensure lists inside body are left-aligned */
+        }
+        .service-card .service-body li {
+            margin-bottom: 0.5rem;
+        }
+
+        /* Footer */
         footer {
-            background-color: #343a40;
-            color: white;
+            background: #1a1a1a;
+            color: #9ca3af;
             text-align: center;
-            padding: 1rem 0;
-            margin-top: 3rem;
+            padding: 2.5rem 2rem;
+            margin-top: 4rem; /* Add top margin */
         }
-        /* Basic Responsive */
+
+        footer p {
+            font-size: 0.9rem;
+        }
+
+        /* Responsive Design */
         @media (max-width: 768px) {
             nav {
-                flex-direction: column;
-                gap: 0.5rem;
+                flex-wrap: wrap;
+                gap: 1rem;
+                justify-content: center;
             }
+
+            .section {
+                padding: 3rem 1.5rem;
+            }
+
+            .section h2 {
+                font-size: 2rem;
+            }
+
+            .services-grid {
+                grid-template-columns: 1fr; /* Single column on mobile */
+            }
+        }
+
+        /* Loading Animation */
+        .loading {
+            text-align: center;
+            padding: 3rem 2rem;
+            color: #6b7280;
+        }
+
+        .spinner {
+            border: 3px solid #e5e7eb;
+            border-top: 3px solid #2563eb;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 0.8s linear infinite;
+            margin: 0 auto 1rem;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav>
             <a href="index.html">Home</a>
             <a href="articles.html">Articles</a>
@@ -91,6 +240,10 @@
         <h2>Our Services</h2>
         <div id="services-container" class="services-grid">
             <!-- Services will be loaded here -->
+            <div class="loading">
+                <div class="spinner"></div>
+                <p>Loading services...</p>
+            </div>
         </div>
     </div>
 
@@ -160,7 +313,7 @@
                             <div class="service-card">
                                 <img src="${meta.image}" alt="${meta.title}" loading="lazy">
                                 <h3>${meta.title}</h3>
-                                <div>${htmlBody}</div>
+                                <div class="service-body">${htmlBody}</div>
                             </div>
                         `);
                     }
@@ -169,7 +322,7 @@
 
             } catch (error) {
                 console.error('Error loading services:', error);
-                document.getElementById('services-container').innerHTML = '<p>Error loading services.</p>';
+                document.getElementById('services-container').innerHTML = '<p>Error loading services. Please try again later.</p>';
             }
         }
 
