--- a/team.html
+++ b/team.html
@@ -425,11 +425,16 @@
             const end = start + teamItemsPerPage;
             const pageMembers = members.slice(0, end);
 
-            // Create an array of card HTML strings
-            const memberCards = pageMembers.map(member => {
-                // Use simpleMarkdownToHTML for the excerpt to handle markdown formatting
-                const excerpt = simpleMarkdownToHTML(member.htmlBody.substring(0, 100)) + '...';
-                return `
+            // Build HTML string for all member cards
+            let cardsHTML = '';
+            for (const member of pageMembers) {
+                // Extract plain text from htmlBody for excerpt
+                const tempDiv = document.createElement('div');
+                tempDiv.innerHTML = member.htmlBody;
+                const plainText = tempDiv.textContent || tempDiv.innerText || '';
+                const excerpt = plainText.substring(0, 100) + '...';
+
+                cardsHTML += `
                     <div class="card">
                         <img src="${member.meta.image}" alt="${member.meta.title}" loading="lazy">
                         <div class="card-content">
@@ -440,10 +445,9 @@
                         </div>
                     </div>
                 `;
-            }); // memberCards is now an array of strings
+            }
 
-            // Join the array of strings into a single string and set innerHTML
-            document.getElementById('team-container').innerHTML = memberCards.join(''); // CORRECTED: join the array once
+            document.getElementById('team-container').innerHTML = cardsHTML;
 
             const paginationContainer = document.getElementById('team-pagination-container');
             if (members.length > end) {
