--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                     <a href="#" class="learn-more-btn">Learn More About Our Mission</a>
                 </div>
                 <div class="about-image">
-                    <img src="https://via.placeholder.com/600x400/14b8a6/ffffff?text=Our+Mission" alt="About Us">
+                    <img src="/content/images/Screenshot 2025-08-01 215323.png" alt="About Us">
                 </div>
             </div>
         </div>
